--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <version>${spring.boot.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
         <!--MYSQL-->
         <dependency>
             <groupId>mysql</groupId>
