add spring.jpa.show-sql=true,spring.jpa.hibernate.ddl-auto=update to the yaml file

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     driverClassName: org.h2.Driver
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    hibernate:
+      ddl-auto: update
   h2:
     console:
       enabled: true
