--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <lombok.version>1.18.24</lombok.version>
         <jaxb.version>2.3.1</jaxb.version>
         <swagger.version>1.6.11</swagger.version>
+        <validation.version>3.0.0</validation.version>
     </properties>
 
     <dependencies>
@@ -56,6 +57,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-hateoas</artifactId>
             <version>${spring.boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>${validation.version}</version>
         </dependency>
         <!--MYSQL-->
         <dependency>
